--- a/lib/src/main/res/layout/document_activity.xml
+++ b/lib/src/main/res/layout/document_activity.xml
@@ -33,6 +33,7 @@
 				android:ellipsize="end"
 				android:textSize="16sp"
 				android:textColor="@android:color/white"
+				android:visibility="gone"
 				/>
 
 			<ImageButton
@@ -41,6 +42,7 @@
 				android:layout_height="wrap_content"
 				android:background="@drawable/button"
 				android:src="@drawable/ic_link_white_24dp"
+				android:visibility="gone"
 				/>
 
 			<ImageButton
@@ -66,6 +68,7 @@
 				android:layout_height="wrap_content"
 				android:background="@drawable/button"
 				android:src="@drawable/ic_toc_white_24dp"
+				android:visibility="gone"
 				/>
 
 		</LinearLayout>
